# TR2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TR2D.cpp  TRME.cpp  TRSE.cpp  buildRelease.bat  main.cpp  mapEditor.cpp  oldTRME.cpp  res.rc  skeletonEditor.cpp
Engine/: cAnimation.cpp  cAssets.cpp  cCutscene.cpp  cDialogue.cpp  cEntity.cpp  cGlobal.cpp  cInput.cpp  cInventory.cpp  cParticles.cpp  cProgrammable.cpp  cRigidbody.cpp  cScript.cpp  cUI.cpp  cWearable.cpp  cWindow.cpp  cWorld.cpp  hAnimation.hpp  hAssets.hpp  hCutscene.hpp  hDialogue.hpp  hEntity.hpp  hGlobal.hpp  hInput.hpp  hInventory.hpp  hParticles.hpp  hProgrammable.hpp  hRigidbody.hpp  hScript.hpp  hUI.hpp  hWearable.hpp  hWindow.hpp  hWorld.hpp  tr2d.res
res/anims/: baubles.tranim  items.tranim  menus.tranim  mpFaces.tranim  ui.tranim  weapons.tranim
res/dialogues/: colors.trconf  test.trdialogue
res/ents/: eutihey.trent  nasake.trent
res/global/: control.trconf  tr_shader.frag  window.trconf
res/items/: baubles.tritems  food.tritems  weapons.tritems
res/skeletons/: eutihey.trskeleton  nasake.trskeleton
res/ui/: cts.trui  inventory.old  inventory.trui  mainMenu.trui  settings.trui
res/worlds/: template.trmap  test.trmap  test.trworld  xml.trworld
